--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "webpack": "^5.67.0",
