--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1"
   },
+  "homepage": "https://ymbeltran.github.io/todo-app/",
   "name": "todolist",
   "version": "1.0.0",
   "description": "TODO list made using React",
