--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "mini-css-extract-plugin": "^2.5.3",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.5.0"
   },
   "homepage": "https://ymbeltran.github.io/todo-app/",
   "name": "todolist",
